add reference-derived scenarios and dataset integration , ui updated
